Adding a `Password Change` feature, adiding a Toast component, making some changes server-side ...
